# jble4bricks

./: .gitignore  AGENTS.md  LICENSE  README.md  checkstyle-suppressions.xml  owasp-suppressions.xml  pom.xml  proguard_lib.conf  varani_java_checks.xml  versions_rules.xml
src/main/java/ch/varani/bricks/ble/api/: BleConnection.java  BleDevice.java  BleException.java  BleScanner.java  BleScannerFactory.java  ScanCallback.java  package-info.java
src/main/java/ch/varani/bricks/ble/api/dsl/: BrickDsl.java  BuWizz2Dsl.java  BuWizz3Dsl.java  CircuitCubesDsl.java  ConnectionDsl.java  DeviceDsl.java  LegoDsl.java  SBrickDsl.java  ScanDsl.java  WeDo2Dsl.java  package-info.java
src/main/java/ch/varani/bricks/ble/device/buwizz/: BuWizz2PowerLevel.java  BuWizz2ProtocolConstants.java  BuWizz3ProtocolConstants.java  package-info.java
src/main/java/ch/varani/bricks/ble/device/circuitcubes/: CircuitCubesChannel.java  CircuitCubesProtocolConstants.java  package-info.java
src/main/java/ch/varani/bricks/ble/device/fxbricks/: package-info.java
src/main/java/ch/varani/bricks/ble/device/lego/: LegoColor.java  LegoHubType.java  LegoProtocolConstants.java  WeDo2DeviceType.java  WeDo2LedColor.java  WeDo2Port.java  WeDo2SensorMode.java  package-info.java
src/main/java/ch/varani/bricks/ble/device/sbrick/: SBrickChannel.java  SBrickDirection.java  SBrickProtocolConstants.java  package-info.java
src/main/java/ch/varani/bricks/ble/impl/linux/: LinuxBleConnection.java  LinuxBleDevice.java  LinuxBleNativeCallbacks.java  LinuxBleScanner.java  LinuxJniNativeBridge.java  LinuxNativeBridge.java
src/main/java/ch/varani/bricks/ble/impl/macos/: BleNativeCallbacks.java  JniNativeBridge.java  MacOsBleConnection.java  MacOsBleDevice.java  MacOsBleScanner.java  NativeBridge.java
src/main/java/ch/varani/bricks/ble/impl/windows/: WindowsBleConnection.java  WindowsBleDevice.java  WindowsBleNativeCallbacks.java  WindowsBleScanner.java  WindowsJniNativeBridge.java  WindowsNativeBridge.java
src/main/java/ch/varani/bricks/ble/util/: NativeLibraryLoader.java
src/main/java/ch/varani/lego/ble/api/: BleConnection.java  BleDevice.java  BleException.java  BleScanner.java  BleScannerFactory.java  ScanCallback.java  package-info.java
src/main/java/ch/varani/lego/ble/device/buwizz/: BuWizz2ProtocolConstants.java  BuWizz3ProtocolConstants.java  package-info.java
src/main/java/ch/varani/lego/ble/device/circuitcubes/: CircuitCubesProtocolConstants.java  package-info.java
src/main/java/ch/varani/lego/ble/device/fxbricks/: package-info.java
src/main/java/ch/varani/lego/ble/device/lego/: LegoProtocolConstants.java  package-info.java
src/main/java/ch/varani/lego/ble/device/sbrick/: SBrickProtocolConstants.java  package-info.java
src/main/java/ch/varani/lego/ble/impl/macos/: JniNativeBridge.java  MacOsBleConnection.java  MacOsBleDevice.java  MacOsBleScanner.java  NativeBridge.java
src/main/java/ch/varani/lego/ble/util/: NativeLibraryLoader.java
src/main/native/linux/: BleBridge.c  BleBridge.h  CMakeLists.txt
src/main/native/macos/: BleBridge.h  BleBridge.m  CMakeLists.txt
src/main/native/windows/: BleBridge.cpp  BleBridge.h  CMakeLists.txt
src/test/java/ch/varani/bricks/ble/api/: BleExceptionTest.java  BleScannerFactoryTest.java
src/test/java/ch/varani/bricks/ble/api/dsl/: BrickDslTest.java  BuWizz2DslTest.java  BuWizz3DslTest.java  CircuitCubesDslTest.java  ConnectionDslTest.java  DeviceDslTest.java  LegoDslTest.java  SBrickDslTest.java  ScanDslTest.java  WeDo2DslTest.java
src/test/java/ch/varani/bricks/ble/device/buwizz/: BuWizz2PowerLevelTest.java  BuWizz2ProtocolConstantsTest.java  BuWizz3ProtocolConstantsTest.java
src/test/java/ch/varani/bricks/ble/device/circuitcubes/: CircuitCubesChannelTest.java  CircuitCubesProtocolConstantsTest.java
src/test/java/ch/varani/bricks/ble/device/lego/: LegoColorTest.java  LegoHubTypeTest.java  LegoProtocolConstantsTest.java  WeDo2DeviceTypeTest.java  WeDo2LedColorTest.java  WeDo2PortTest.java  WeDo2SensorModeTest.java
src/test/java/ch/varani/bricks/ble/device/sbrick/: SBrickChannelTest.java  SBrickDirectionTest.java  SBrickProtocolConstantsTest.java
src/test/java/ch/varani/bricks/ble/impl/linux/: LinuxBleConnectionTest.java  LinuxBleDeviceTest.java  LinuxBleScannerNativeLoadTest.java  LinuxBleScannerTest.java  LinuxJniNativeBridgeTest.java
src/test/java/ch/varani/bricks/ble/impl/macos/: JniNativeBridgeTest.java  MacOsBleConnectionTest.java  MacOsBleDeviceTest.java  MacOsBleScannerNativeLoadTest.java  MacOsBleScannerTest.java
src/test/java/ch/varani/bricks/ble/impl/windows/: WindowsBleConnectionTest.java  WindowsBleDeviceTest.java  WindowsBleScannerNativeLoadTest.java  WindowsBleScannerTest.java  WindowsJniNativeBridgeTest.java
src/test/java/ch/varani/bricks/ble/util/: NativeLibraryLoaderTest.java
src/test/java/ch/varani/lego/ble/api/: BleExceptionTest.java  BleScannerFactoryTest.java
src/test/java/ch/varani/lego/ble/device/buwizz/: BuWizz2ProtocolConstantsTest.java  BuWizz3ProtocolConstantsTest.java
src/test/java/ch/varani/lego/ble/device/circuitcubes/: CircuitCubesProtocolConstantsTest.java
src/test/java/ch/varani/lego/ble/device/lego/: LegoProtocolConstantsTest.java
src/test/java/ch/varani/lego/ble/device/sbrick/: SBrickProtocolConstantsTest.java
src/test/java/ch/varani/lego/ble/impl/macos/: MacOsBleConnectionTest.java  MacOsBleDeviceTest.java  MacOsBleScannerNativeLoadTest.java  MacOsBleScannerTest.java
src/test/java/ch/varani/lego/ble/util/: NativeLibraryLoaderTest.java
